// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl get credential throws on missing arguments 1`] = `
"Usage: refactrctl credential <credential-id> [options]

Positionals:
  credential-id  ID of the credential to fetch  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the credential  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl get job throws on missing arguments 1`] = `
"Usage: refactrctl <job-id> [options]

Positionals:
  job-id  ID of the job to fetch  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the job  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl get pipeline throws on missing arguments 1`] = `
"Usage: refactrctl pipeline <pipeline-id> [options]

Positionals:
  pipeline-id  ID of the pipeline to fetch  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project to fetch  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl get pipeline-revision throws on missing arguments 1`] = `
"Usage: refactrctl <revision> [options]

Positionals:
  revision  Revision number of the pipeline revision to fetch  [number] [default: read from stdin]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token   Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help         Show help  [boolean]
      --project-id   ID of the project containing the pipeline revision  [string] [required]
      --pipeline-id  ID of the pipeline for the pipeline revision  [string] [required]

Missing required arguments: project-id, pipeline-id
"
`;

exports[`refactrctl get run throws on missing arguments 1`] = `
"Usage: refactrctl <run-id> [options]

Positionals:
  run-id  ID of the run to fetch  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the run  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl get runner throws on missing arguments 1`] = `
"Usage: refactrctl get <command> [options]

Commands:
  refactrctl get credential [credential-id]      Get credential details
  refactrctl get job [job-id]                    Get job details
  refactrctl get project [project-id]            Get project details
  refactrctl get pipeline [pipeline-id]          Get pipeline details
  refactrctl get organization [organization-id]  Get organization details
  refactrctl get run                             Get run details
  refactrctl get pipeline-revision               Get pipeline-revision details

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]

Unknown argument: runner
"
`;

exports[`refactrctl get throws on missing subcommand 1`] = `
"Usage: refactrctl get <command> [options]

Commands:
  refactrctl get credential [credential-id]      Get credential details
  refactrctl get job [job-id]                    Get job details
  refactrctl get project [project-id]            Get project details
  refactrctl get pipeline [pipeline-id]          Get pipeline details
  refactrctl get organization [organization-id]  Get organization details
  refactrctl get run                             Get run details
  refactrctl get pipeline-revision               Get pipeline-revision details

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]

Command must be specified
"
`;
